refaire  index.js

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1 class="my-4">La boutique</h1>
       </div>
       <!-- /.col-lg-3 -->
-      <div id="produit" class="row">
+      <div id="productList" class="row">
        
       </div>
       <!-- /.row -->
@@ -61,6 +61,7 @@
   <!-- /.row -->
 
   </div>
+
   <!-- /.container -->
 
   <!-- Footer -->
