--- a/pages/confirmation.html
+++ b/pages/confirmation.html
@@ -3,14 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-	<link rel="stylesheet" href="css/style.css">
+  <!-- Bootstrap core CSS -->
+  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="../css/shop-homepage.css" rel="stylesheet">
 	<title>Merci de ORINOCO</title>
 	<meta name="description" content="ORINOCO est un site de vente en ligne d'ours en peluche, de meubles en bois d'est de caméras anciennes">
 </head>
 <body class="order-confirm">
 	<header class="order-confirm__topbar">
 		<h1>
-			<img class="order-confirm__topbar__logo" src="img/orinoco-logo.png" alt="Logo d'Orinoco">
+			<img class="order-confirm__topbar__logo" src="../images/logo.png" alt="Logo d'Orinoco">
 		</h1>
 	</header>
 	<section class="order-confirm__card">
@@ -22,13 +26,14 @@
 			</div>
 		</div>
 		<nav class="order-confirm__card__nav">
-			<p>Pour revenir à l'accueil de notre boutique cliquez sur ce lien <a href="index.html">Accueil</a></p>
+			<p>Pour revenir à l'accueil de notre boutique cliquez sur ce lien <a href="../index.html">Accueil</a></p>
 		</nav>
 	</section>
 	<footer>
 		<p>Site</p>
 	</footer>
-	<script src="js/products.js"></script>
+	<script src="../script/produit.js"></script>
+	<script src="../script/confirmation.js"></script>
 	<script>resultOrder()</script>
 </body>
 </html>
