--- a/pages/panier.html
+++ b/pages/panier.html
@@ -1,135 +1,195 @@
-<!DOCTYPE html>
 <html lang="fr">
 
 <head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="ORINOCO" content="">
-  <title>Shop Homepage - Start Bootstrap Template</title>
-  <!-- Theme style  -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/style.css">
-  <!-- Bootstrap core CSS -->
-  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom styles for this template -->
-  <link href="../css/shop-homepage.css" rel="stylesheet">
-
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <title>Orinoco</title>
 </head>
 
-<body>
+<body class="font-weight-light text-secondary">
+  <nav class="nav-bg-color navbar navbar-expand-lg navbar-light py-lg-1">
+    <div class="container">
+      <a class="font-weight-bold navbar-brand text-dark" href="../index.html">
+        <img src="../images/logo.png" alt="image logo orinoco">
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
- 
-      <a class="navbar-brand" href="#"><img src="../images/logo.png" alt="Logo d'Orinoco"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      </a>
+      <ul class="flex-row ml-auto navbar-nav order-lg-1 pl-2 pr-2">
+        <li class="nav-item">
+        </li>
+        <li class="nav-item">
+          <a class="nav-link p-2 pb-3 pl-2 pr-2 pt-3" href="#" title="View Cart"><svg xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24" fill="currentColor" width="1.25em" height="1.25em">
+              <g>
+                <path fill="none" d="M0 0h24v24H0z"></path>
+                <path
+                  d="M7 8V6a5 5 0 1 1 10 0v2h3a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1h3zm0 2H5v10h14V10h-2v2h-2v-2H9v2H7v-2zm2-2h6V6a3 3 0 0 0-6 0v2z">
+                </path>
+              </g>
+            </svg> <span class="small">(0)</span></a>
+        </li>
+        <li class="nav-item">
+        </li>
+      </ul>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown-3"
+        aria-controls="navbarNavDropdown-3" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="../index.html">Accueil</a>
+      <div class="collapse navbar-collapse " id="navbarNavDropdown-3">
+        <ul class="ml-auto navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link px-lg-3 py-lg-4" href="../index.html">Accueil <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/panier.html">Panier</a>
+          </li>
+          <li class="nav-item">
+          </li>
+          <li class="nav-item">
+          </li>
+          <li class="nav-item">
           </li>
         </ul>
       </div>
     </div>
   </nav>
-
   <!-- Page Content -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-3">
-      
-        <h1 class="my-4">La boutique</h1>
-      </div>
-
-  <!--   JUMBOTRON   -->
-  <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-          <h1 class="text-success">Bienvenue sur votre Panier d'achat</h1>
-          <p class="lead">Vérifiez votre panier </p>
-          <hr class="my-4">
-        
-          <a href="../index.html">
-              <button  class="btn btn-primary" type="button">Nos produits</button>
-          </a>
-      </div>
-  </div>
-
-
   <!--    FORM    -->
 
-  <form class="container" action="">
-      <div class="form-group row">
-          <label class="col-sm-2 col-form-label" for="Nom">Nom</label>
-          <div class="col-sm-10">
-              <input type="text" class="form-control" name="Nom" placeholder="Nom de famille">
-          </div>
-      </div>
-      <div class="form-group row">
-          <label class="col-sm-2 col-form-label" for="Prenom">Prénom</label>
-          <div class="col-sm-10">
-              <input type="text" class="form-control" name="Prénom" placeholder="Prénom">
-          </div>
-      </div>
-      <div class="form-group row mb-5">
-          <label class="col-sm-2 col-form-label" for="email">Adresse email</label>
-          <div class="col-sm-10">
-              <input type="email" class="form-control" name="email" placeholder="email.net">
-          </div>
-      </div>
-      <div class="form-check">
-          <input type="checkbox" class="form-check-input">
-          <label for="vérification">Vérifiez vos données saisies</label>
-      </div>
- 
-  </form>
 
-      <!--     FOOTER     -->
-  <footer class="container-fluid bg-white-purple mt-5 pt-4">
-      <div class="container">
-          <div class="row">
-              <div class="col">
-                  <ul class="list-inline list-unstyled text-center">
-                      <li class="list-inline-item">
-                          <a class="" href="#">A propos de nous</a>
-                      </li>
-                      <li class="list-inline-item">
-                          <p>.</p>
-                      </li>
-                      <li class="list-inline-item">
-                          <a class="" href="#">Nous contacter</a>
-                      </li>
-                      <li class="list-inline-item">
-                          <p>.</p>
-                      </li>
-                      <li class="list-inline-item">
-                          <a class="" href="#">Conditions d'utilisation</a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-      </div>
-  </footer>
-
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
+  <section class="jumbotron text-center">
     <div class="container">
-      <p class="m-0 text-center text-white">Website 2020</p>
+      <h1 class="jumbotron-heading">PANNIER</h1>
     </div>
-    <!-- /.container -->
+  </section>
+
+  <div class="container mb-4">
+    <div class="row">
+      <div class="col-12">
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col"> </th>
+                <th scope="col">Product</th>
+                <th scope="col">Available</th>
+                <th scope="col" class="text-center">Quantity</th>
+                <th scope="col" class="text-right">Price</th>
+                <th> </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
+                <td>Product Name Dada</td>
+                <td>In stock</td>
+                <td><input class="form-control" type="text" value="1" /></td>
+                <td class="text-right">124,90 €</td>
+                <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button> </td>
+              </tr>
+              <tr>
+                <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
+                <td>Product Name Toto</td>
+                <td>In stock</td>
+                <td><input class="form-control" type="text" value="1" /></td>
+                <td class="text-right">33,90 €</td>
+                <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button> </td>
+              </tr>
+              <tr>
+                <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
+                <td>Product Name Titi</td>
+                <td>In stock</td>
+                <td><input class="form-control" type="text" value="1" /></td>
+                <td class="text-right">70,00 €</td>
+                <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button> </td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>Sub-Total</td>
+                <td class="text-right">255,90 €</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>Shipping</td>
+                <td class="text-right">6,90 €</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><strong>Total</strong></td>
+                <td class="text-right"><strong>346,90 €</strong></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="col mb-2">
+        <div class="row">
+          <div class="col-sm-12  col-md-6">
+            <button class="btn btn-block btn-light">Continue Shopping</button>
+          </div>
+          <div class="col-sm-12 col-md-6 text-right">
+            <button class="btn btn-lg btn-block btn-success text-uppercase">Checkout</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </form>
+  <!--     FOOTER     -->
+  <footer class="container-fluid nav-bg-color mt-5 pt-4">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <ul class="list-inline list-unstyled text-center">
+            <li class="list-inline-item">
+              <a class="" href="#">A propos de nous</a>
+            </li>
+            <li class="list-inline-item">
+              <p>.</p>
+            </li>
+            <li class="list-inline-item">
+              <a class="" href="#">Nous contacter</a>
+            </li>
+            <li class="list-inline-item">
+              <p>.</p>
+            </li>
+            <li class="list-inline-item">
+              <a class="" href="#">Conditions d'utilisation</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    </main>
   </footer>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!--     MY SCRIPT FRONT    -->
 
+  <script src=""></script>
+
+
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
