--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
+  <script src="https://kit.fontawesome.com/746b2bc6da.js" crossorigin="anonymous"></script>
 
 
   <!-- Bootstrap CSS -->
@@ -21,6 +22,7 @@
       </a>
       <ul class="flex-row ml-auto navbar-nav order-lg-1 pl-2 pr-2">
         <li class="nav-item">
+
         </li>
         <li class="nav-item">
           <a class="nav-link p-2 pb-3 pl-2 pr-2 pt-3" href="./pages/panier.html" title="View Cart"><svg
@@ -33,7 +35,9 @@
               </g>
             </svg> <span class="small">(0)</span></a>
         </li>
-        <li class="nav-item">
+        <!-- User  -->
+        <li class="nav-item ">
+          <a href="#"><i class="fas fa-user nav-link px-lg-3 py-lg-4"></i></a>
         </li>
       </ul>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown-3"
