--- a/pages/produit.html
+++ b/pages/produit.html
@@ -31,8 +31,8 @@
                   d="M7 8V6a5 5 0 1 1 10 0v2h3a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1h3zm0 2H5v10h14V10h-2v2h-2v-2H9v2H7v-2zm2-2h6V6a3 3 0 0 0-6 0v2z">
                 </path>
               </g>
-            </svg> <span class="small addToCart">(0)</span></a>
-          <div class="cart__nb"></div>
+            </svg> <span class="small cart_small_nb">0</span></a>
+
         </li>
         <!-- nwe -->
 
@@ -52,24 +52,25 @@
             <a class="nav-link px-lg-3 py-lg-4" href="../index.html">Accueil <span class="sr-only">(current)</span></a>
 
           </li>
-          <li class="nav-item">
-          </li>
-          <li class="nav-item">
-          </li>
-          <li class="nav-item">
-          </li>
+
           <li class="nav-item">
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <main class="container">
-    <section id="main-products" class="row d-flex justify-content-center">
+  <div class="col-sm-6 col-md-4  ">
+    <section class="section product-section">
+      <!-- Contenu généré par le javascript (product.js) -->
+
+      <article class=" card nav-bg-color  border-dark ">
+    </section>
+
+    <!-- 
       <div id="product-card" class="col-sm-6 col-md-4 ">
-        <article class=" card nav-bg-color  border-dark product-card ">
-          <!-- contenu génénré par le javascript produit.js -->
-          <!-- <img id="img-product" class="img-top" src="../images/teddy_1.jpg" alt="">
+        <article class=" card nav-bg-color  border-dark product-card "> -->
+    <!-- contenu génénré par le javascript produit.js -->
+    <!-- <img id="img-product" class="img-top" src="../images/teddy_1.jpg" alt="">
           <aside class="card-body">
             <h3 id="nom-product" class="card-title">
             </h3>
@@ -80,53 +81,57 @@
 
               <span class="text-add-panier">Ajouter au Panier</span>
             </button>
-          </aside> -->
+          </aside>
         </article>
-      </div>
-  </main>
-  <!-- FOOTER -->
-  <footer class="container-fluid nav-bg-color mt-5 pt-4">
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <ul class="list-inline list-unstyled text-center">
-            <li class="list-inline-item">
-              <a class="" href="#">A propos de nous</a>
-            </li>
-            <li class="list-inline-item">
-              <p>.</p>
-            </li>
-            <li class="list-inline-item">
-              <a class="" href="#">Nous contacter</a>
-            </li>
-            <li class="list-inline-item">
-              <p>.</p>
-            </li>
-            <li class="list-inline-item">
-              <a class="" href="#">Conditions d'utilisation</a>
-            </li>
-          </ul>
+      </div> -->
+
+    <!-- Contenu généré par le javascript (product.js) -->
+    <!-- </section>
+      </main> -->
+    <!-- FOOTER -->
+    <footer class="container-fluid nav-bg-color mt-5 pt-4">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <ul class="list-inline list-unstyled text-center">
+              <li class="list-inline-item">
+                <a class="" href="#">A propos de nous</a>
+              </li>
+              <li class="list-inline-item">
+                <p>.</p>
+              </li>
+              <li class="list-inline-item">
+                <a class="" href="#">Nous contacter</a>
+              </li>
+              <li class="list-inline-item">
+                <p>.</p>
+              </li>
+              <li class="list-inline-item">
+                <a class="" href="#">Conditions d'utilisation</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-    </main>
-  </footer>
+      </main>
+    </footer>
 
-  <!--     MY SCRIPT FRONT    -->
+    <!--     MY SCRIPT FRONT    -->
 
-  <script src="../script/produit.js"></script>
+    <script src="../script/produit.js"></script>
+    <script src="../script/components.js"></script>
 
 
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-    </script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-    </script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+      </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+      </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+      </script>
 </body>
 
 </html>
