--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   d="M7 8V6a5 5 0 1 1 10 0v2h3a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1h3zm0 2H5v10h14V10h-2v2h-2v-2H9v2H7v-2zm2-2h6V6a3 3 0 0 0-6 0v2z">
                 </path>
               </g>
-            </svg> <span class="small">(0)</span></a>
+            </svg> <span class="small cart_small_nb">(0)</span></a>
         </li>
         <!-- User  -->
         <li class="nav-item ">
@@ -191,6 +191,7 @@
   <!--     MY SCRIPT FRONT    -->
 
   <script src="./script/index.js"></script>
+  <script src="./script/components.js"></script>
 
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
