--- a/pages/panier.html
+++ b/pages/panier.html
@@ -31,7 +31,7 @@
                   d="M7 8V6a5 5 0 1 1 10 0v2h3a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1h3zm0 2H5v10h14V10h-2v2h-2v-2H9v2H7v-2zm2-2h6V6a3 3 0 0 0-6 0v2z">
                 </path>
               </g>
-            </svg> <span class="small">(0)</span></a>
+            </svg> <span class="small cart_small_nb">(0)</span></a>
         </li>
         <li class="nav-item">
           <!-- single info -->
@@ -42,332 +42,52 @@
         aria-controls="navbarNavDropdown-3" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse " id="navbarNavDropdown-3">
-        <ul class="ml-auto navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link px-lg-3 py-lg-4" href="../index.html">Accueil <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-          </li>
-          <li class="nav-item">
-          </li>
-          <li class="nav-item">
-          </li>
-          <li class="nav-item">
-          </li>
-        </ul>
-      </div>
+      <div class="collapse navbar-collapse " id="navbarNavDropdown-3"></div>
+      <ul class="ml-auto navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link px-lg-3 py-lg-4" href="../index.html">Accueil <span class="sr-only">(current)</span></a>
+        </li>
+
+        <li class="nav-item">
+        </li>
+      </ul>
+    </div>
     </div>
   </nav>
-  <!-- Page Content -->
-  <!--    FORM    -->
-  <!DOCTYPE html>
-  <html lang="fr">
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Comment créer un panier en JavaScript">
-    <meta name="author" content="1FORMATIK.com">
-    <title>Comment créer un panier en JavaScript</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-      integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-  </head>
+  <div class="container mb-4">
+    <div class="row">
+      <div class="col-12">
 
-  <body>
-    <div class="container bg-light rounded">
-      <div class="row">
-        <div class="col-md-12 mt-3">
-          <div class="row">
-            <div class="col-md-5">
-              <p>Produit 01</p>
-            </div>
-            <div class="col-md-4">
-              <p>8.00 €</p>
-            </div>
-            <div class="col-md-3 text-right">
-              <a style="cursor:pointer;" data-nom="Produit 01" data-prix="8.00"
-                class="btn btn-primary ajouter-panier">ajouter au panier</a>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-5">
-              <p>Produit 02</p>
-            </div>
-            <div class="col-md-4">
-              <p>10.00 €</p>
-            </div>
-            <div class="col-md-3 text-right">
-              <a style="cursor:pointer;" data-nom="Produit 02" data-prix="10.00"
-                class="btn btn-primary ajouter-panier">ajouter au panier</a>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-5">
-              <p>Produit 03</p>
-            </div>
-            <div class="col-md-4">
-              <p>15.00 €</p>
-            </div>
-            <div class="col-md-3 text-right">
-              <a style="cursor:pointer;" data-nom="Produit 03" data-prix="15.00"
-                class="btn btn-primary ajouter-panier">ajouter au panier</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 mt-3">
-          <h4>Votre commande</h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 mt-3">
-          Nombre de produit(s) dans le panier : <span class="total-count"></span>
-          <br /><br />
-          <table width="100%" class="show-panier" id="macommande"></table>
-          <br />
-          <br />
-          <div>*Prix total: <b><span class="total-panier" id="prix_total">0.00</span> euros</b></div>
-          <br />
-          <i id="livraison-detail">*Livraison incluse</i>
-          <div class="text-right"><button class="clear-panier btn btn-danger">Vider le panier</button></div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 mt-3">
-          <h4>Adresse de livraison</h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 mt-3">
-          <input class="form-control" type="text" name="nom" value="" id="nom" placeholder="Nom">
-          <br>
-          <input class="form-control" type="text" name="prenom" value="" id="prenom" placeholder="Prénom">
-          <br>
-          <input class="form-control" type="text" name="cp" value="" id="cp" placeholder="Code postal">
-          <br>
-          <input class="form-control" type="text" name="ville" value="" id="ville" placeholder="Ville">
-          <br>
-          <input class="form-control" type="text" name="email" value="" id="email" placeholder="e-Mail">
-          <br>
-          <textarea class="form-control" id="message" placeholder="Message Optionnel"></textarea>
-          <br>
-          <div class="text-right"><button type="button" class="btn btn-success" id="commander">Commander</button></div>
-          <br>
-          <div id="qte_minimum_report"></div>
-        </div>
-      </div>
-      <div class="modal" id="mymodal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Commande confirmée</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <div id="commande_report">Merci de votre commande</div>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="modal" id="mymodal_erreur" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Erreur de commande</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <div id="commande_report">Une erreur est survenue</div>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
-            </div>
-          </div>
+        <div class="table-responsive ">
+
+          <table class="table table-striped jumbotron text-center section cart-section addToCart">
+
+          </table>
+
         </div>
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"></script>
-    <!-- <script src="./js/panier.js"></script> -->
-    <script>
-    //   function commander(nom, prenom, cp, email, commande, prix_total, message, ville) {
-    //     $.ajax({
-    //       url: 'mail.php',
-    //       type: 'GET',
-    //       data: 'nom=' + nom + '&prenom=' + prenom + '&cp=' + cp + '&email=' + email + '&commande=' + commande + '&prix_total=' + prix_total + '&message=' + message + '&ville=' + ville,
-    //       dataType: 'html',
-    //       success: function (reponse) {
-    //         if (reponse == "1") { $('#mymodal').modal('show'); }
-    //         if (reponse == "0") { $('#mymodal_erreur').modal('show'); }
-    //       }
-    //     });
-    //   }
-    //   $('#commander').click(function () {
-    //     var nom = document.getElementById("nom").value;
-    //     var prenom = document.getElementById("prenom").value;
-    //     var cp = document.getElementById("cp").value;
-    //     var ville = document.getElementById("ville").value;
-    //     var email = document.getElementById("email").value;
-    //     var commande = document.getElementById("macommande").innerHTML;
-    //     var prix_total = document.getElementById("prix_total").innerHTML;
-    //     var message = document.getElementById("message").value;
-    //     commander(nom, prenom, cp, email, commande, prix_total, message, ville);
-    //   });
-    // </script>
+  </div>
+
+  <!--     MY SCRIPT FRONT    -->
+
+  <script src="../script/panier.js"></script>
+  <script src="../script/components.js"></script>
 
 
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
 
-    //
-    <!-- <section class="jumbotron text-center  section cart-section"> -->
-    // <div class="container cart-section__tbody">
-      // <h1 class="jumbotron-heading">PANNIER</h1>
-      // </div>
-    // </section>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+</body>
 
-    // <div class="container mb-4">
-      // <div class="row">
-        // <div class="col-12">
-          // <div class="table-responsive">
-            // <table class="table table-striped">
-              // <thead>
-                // <tr>
-                  // <th scope="col"> </th>
-                  // <th scope="col">Product</th>
-                  // <th scope="col">Available</th>
-                  // <th scope="col" class="text-center">Quantity</th>
-                  // <th scope="col" class="text-right">Price</th>
-                  // <th> </th>
-                  // </tr>
-                // </thead>
-              // <tbody>
-                // <tr>
-                  // <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
-                  // <td>Product Name Dada</td>
-                  // <td>In stock</td>
-                  // <td><input class="form-control" type="text" value="1" /></td>
-                  // <td class="text-right">124,90 €</td>
-                  // <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button>
-                    // </td>
-                  // </tr>
-                // <tr>
-                  // <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
-                  // <td>Product Name Toto</td>
-                  // <td>In stock</td>
-                  // <td><input class="form-control" type="text" value="1" /></td>
-                  // <td class="text-right">33,90 €</td>
-                  // <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button>
-                    // </td>
-                  // </tr>
-                // <tr>
-                  // <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
-                  // <td>Product Name Titi</td>
-                  // <td>In stock</td>
-                  // <td><input class="form-control" type="text" value="1" /></td>
-                  // <td class="text-right">70,00 €</td>
-                  // <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button>
-                    // </td>
-                  // </tr>
-                // <tr>
-                  <!-- 
-                  <td>Sub-Total</td>
-                  <td class="text-right">255,90 €</td>
-                </tr>
-                <tr>
-
-                  <td>Shipping</td>
-                  <td class="text-right">6,90 €</td>
-                </tr>
-                <tr>
-
-                  <td><strong>Total</strong></td>
-                  <td class="text-right"><strong>346,90 €</strong></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <div class="col mb-2">
-          <div class="row">
-            <div class="col-sm-12  col-md-6">
-              <button class="btn btn-block btn-light">Continue Shopping</button>
-            </div>
-            <div class="col-sm-12 col-md-6 text-right">
-              <button class="btn btn-lg btn-block btn-success text-uppercase">Checkout</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    </form> -->
-
-
-                  <!--     FOOTER     -->
-                  <footer class="container-fluid nav-bg-color mt-5 pt-4">
-                    <div class="container">
-                      <div class="row">
-                        <div class="col">
-                          <ul class="list-inline list-unstyled text-center">
-                            <li class="list-inline-item">
-                              <a class="" href="#">A propos de nous</a>
-                            </li>
-                            <li class="list-inline-item">
-                              <p>.</p>
-                            </li>
-                            <li class="list-inline-item">
-                              <a class="" href="#">Nous contacter</a>
-                            </li>
-                            <li class="list-inline-item">
-                              <p>.</p>
-                            </li>
-                            <li class="list-inline-item">
-                              <a class="" href="#">Conditions d'utilisation</a>
-                            </li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                    </main>
-                  </footer>
-
-                  <!--     MY SCRIPT FRONT    -->
-
-                  <!-- <script src="../script/panier.js"></script> -->
-
-
-                  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-                  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-                    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-                    crossorigin="anonymous">
-                    </script>
-
-                  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-                  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-                    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-                    crossorigin="anonymous">
-                    </script>
-                  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-                    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-                    crossorigin="anonymous">
-                    </script>
-  </body>
-
-  </html>
+</html>
