--- a/pages/produit.html
+++ b/pages/produit.html
@@ -59,18 +59,20 @@
       </div>
     </div>
   </nav>
-  <div class="col-sm-6 col-md-4  ">
-    <section class="section product-section">
-      <!-- Contenu généré par le javascript (product.js) -->
+  <main id="productlist" class="row d-flex justify-content-center">
+    <div class="col-sm-6 col-md-4  ">
+      <section class="section product-section">
+        <!-- Contenu généré par le javascript (product.js) -->
 
-      <article class=" card nav-bg-color  border-dark ">
-    </section>
+        <article class=" card nav-bg-color  border-dark ">
+      </section>
+  </main>
 
-    <!-- 
+  <!-- 
       <div id="product-card" class="col-sm-6 col-md-4 ">
         <article class=" card nav-bg-color  border-dark product-card "> -->
-    <!-- contenu génénré par le javascript produit.js -->
-    <!-- <img id="img-product" class="img-top" src="../images/teddy_1.jpg" alt="">
+  <!-- contenu génénré par le javascript produit.js -->
+  <!-- <img id="img-product" class="img-top" src="../images/teddy_1.jpg" alt="">
           <aside class="card-body">
             <h3 id="nom-product" class="card-title">
             </h3>
@@ -85,53 +87,53 @@
         </article>
       </div> -->
 
-    <!-- Contenu généré par le javascript (product.js) -->
-    <!-- </section>
+  <!-- Contenu généré par le javascript (product.js) -->
+  <!-- </section>
       </main> -->
-    <!-- FOOTER -->
-    <footer class="container-fluid nav-bg-color mt-5 pt-4">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <ul class="list-inline list-unstyled text-center">
-              <li class="list-inline-item">
-                <a class="" href="#">A propos de nous</a>
-              </li>
-              <li class="list-inline-item">
-                <p>.</p>
-              </li>
-              <li class="list-inline-item">
-                <a class="" href="#">Nous contacter</a>
-              </li>
-              <li class="list-inline-item">
-                <p>.</p>
-              </li>
-              <li class="list-inline-item">
-                <a class="" href="#">Conditions d'utilisation</a>
-              </li>
-            </ul>
-          </div>
+  <!-- FOOTER -->
+  <footer class="container-fluid nav-bg-color mt-5 pt-4">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <ul class="list-inline list-unstyled text-center">
+            <li class="list-inline-item">
+              <a class="" href="#">A propos de nous</a>
+            </li>
+            <li class="list-inline-item">
+              <p>.</p>
+            </li>
+            <li class="list-inline-item">
+              <a class="" href="#">Nous contacter</a>
+            </li>
+            <li class="list-inline-item">
+              <p>.</p>
+            </li>
+            <li class="list-inline-item">
+              <a class="" href="#">Conditions d'utilisation</a>
+            </li>
+          </ul>
         </div>
       </div>
-      </main>
-    </footer>
+    </div>
+    </main>
+  </footer>
 
-    <!--     MY SCRIPT FRONT    -->
+  <!--     MY SCRIPT FRONT    -->
 
-    <script src="../script/produit.js"></script>
-    <script src="../script/components.js"></script>
+  <script src="../script/produit.js"></script>
+  <script src="../script/components.js"></script>
 
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-      </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-      </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-      </script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
