--- a/pages/produit.html
+++ b/pages/produit.html
@@ -23,8 +23,8 @@
         <li class="nav-item">
         </li>
         <li class="nav-item">
-          <a class="nav-link p-2 pb-3 pl-2 pr-2 pt-3" href="#" title="View Cart"><svg xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24" fill="currentColor" width="1.25em" height="1.25em">
+          <a class="nav-link p-2 pb-3 pl-2 pr-2 pt-3" href="../pages/panier.html" title="View Cart"><svg
+              xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="1.25em" height="1.25em">
               <g>
                 <path fill="none" d="M0 0h24v24H0z"></path>
                 <path
