ajout un favicon et suppression des comentaire et espaces

--- a/pages/confirmation.html
+++ b/pages/confirmation.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-
-
+    <link rel="shortcut icon" href="../favicon.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -17,7 +16,6 @@
         <div class="container">
             <a class="font-weight-bold navbar-brand text-dark" href="../index.html">
                 <img src="../images/logo.png" alt="image logo orinoco">
-
             </a>
             <ul class="flex-row ml-auto navbar-nav order-lg-1 pl-2 pr-2">
                 <li class="nav-item">
@@ -33,7 +31,6 @@
                                 </path>
                             </g>
                         </svg> <span class="small cart_small_nb">0</span></a>
-
                 </li>
             </ul>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown-3"
@@ -45,14 +42,9 @@
                     <li class="nav-item active">
                         <a class="nav-link px-lg-3 py-lg-4" href="../index.html">Accueil <span
                                 class="sr-only">(current)</span></a>
-
-                    </li>
-
-                    <li class="nav-item">
                     </li>
                 </ul>
             </div>
-
     </nav>
     <main class="row d-flex justify-content-center">
         <div class="col-sm-6 col-md-4  ">
@@ -61,9 +53,7 @@
             </section>
         </div>
     </main>
-
     </div>
-
     <!-- Contenu généré par le javascript (product.js) -->
     <!-- </section>
       </main> -->
@@ -94,13 +84,10 @@
         </div>
         </main>
     </footer>
-
     <!--     MY SCRIPT FRONT    -->
-
     <script src="../script/confirmation.js"></script>
     <script src="../script/components.js"></script>
     <script src="https://kit.fontawesome.com/746b2bc6da.js" crossorigin="anonymous"></script>
-
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
