--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="shortcut icon" href="./favicon.png">
   <script src="https://kit.fontawesome.com/746b2bc6da.js" crossorigin="anonymous"></script>
-
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -18,11 +17,10 @@
     <div class="container">
       <a class="font-weight-bold navbar-brand text-dark" href="index.html">
         <img src="./images/logo.png" alt="image logo orinoco">
-
       </a>
+
       <ul class="flex-row ml-auto navbar-nav order-lg-1 pl-2 pr-2">
         <li class="nav-item">
-
         </li>
         <li class="nav-item">
           <a class="nav-link p-2 pb-3 pl-2 pr-2 pt-3" href="./pages/panier.html" title="View Cart"><svg
@@ -45,26 +43,14 @@
           <li class="nav-item active">
             <a class="nav-link px-lg-3 py-lg-4" href="./index.html">Accueil <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-          </li>
-          <li class="nav-item">
-          </li>
-          <li class="nav-item">
-          </li>
-          <li class="nav-item">
-          </li>
         </ul>
       </div>
     </div>
   </nav>
-
-
   <main class="container">
     <section id="productlist" class="row d-flex justify-content-center">
-
     </section>
   </main>
-
   <!--     FOOTER     -->
   <footer class="container-fluid nav-bg-color mt-5 pt-4">
     <div class="container">
@@ -92,13 +78,9 @@
     </div>
     </main>
   </footer>
-
   <!--     MY SCRIPT FRONT    -->
-
   <script src="./script/index.js"></script>
   <script src="./script/components.js"></script>
-
-
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
