--- a/pages/panier.html
+++ b/pages/panier.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/style.css">
-
-
+  <link rel="shortcut icon" href="../favicon.png">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -18,7 +17,6 @@
     <div class="container">
       <a class="font-weight-bold navbar-brand text-dark" href="../index.html">
         <img src="../images/logo.png" alt="image logo orinoco">
-
       </a>
       <ul class="flex-row ml-auto navbar-nav order-lg-1 pl-2 pr-2">
         <li class="nav-item">
@@ -36,7 +34,6 @@
         </li>
         <li class="nav-item">
           <!-- single info -->
-
         </li>
       </ul>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown-3"
@@ -48,24 +45,11 @@
         <li class="nav-item active">
           <a class="nav-link px-lg-3 py-lg-4" href="../index.html">Accueil <span class="sr-only">(current)</span></a>
         </li>
-
-        <li class="nav-item">
-        </li>
       </ul>
-
     </div>
   </nav>
-
-
-
-
   <section class="text-center  section cart-section addToCart">
-
-
   </section>
-
-
-
   <!--     FOOTER     -->
   <footer class=" container-fluid nav-bg-color mt-5 pt-4">
     <div class="container">
@@ -93,21 +77,15 @@
     </div>
     </main>
   </footer>
-
-
-
   <!--     MY SCRIPT FRONT    -->
   <script src="https://kit.fontawesome.com/746b2bc6da.js" crossorigin="anonymous"></script>
   <script src="../script/panier.js"></script>
   <script src="../script/components.js"></script>
-
-
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
     </script>
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
@@ -115,7 +93,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
-
 </body>
 
 </html>
