--- a/pages/produit.html
+++ b/pages/produit.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="shortcut icon" href="../favicon.png">
   <script src="https://kit.fontawesome.com/746b2bc6da.js" crossorigin="anonymous"></script>
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -17,7 +17,6 @@
     <div class="container">
       <a class="font-weight-bold navbar-brand text-dark" href="../index.html">
         <img src="../images/logo.png" alt="image logo orinoco">
-
       </a>
       <ul class="flex-row ml-auto navbar-nav order-lg-1 pl-2 pr-2">
         <li class="nav-item">
@@ -32,7 +31,6 @@
                 </path>
               </g>
             </svg> <span class="small cart_small_nb">0</span></a>
-
         </li>
       </ul>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown-3"
@@ -43,10 +41,6 @@
         <ul class="ml-auto navbar-nav">
           <li class="nav-item active">
             <a class="nav-link px-lg-3 py-lg-4" href="../index.html">Accueil <span class="sr-only">(current)</span></a>
-
-          </li>
-
-          <li class="nav-item">
           </li>
         </ul>
       </div>
@@ -56,33 +50,9 @@
     <div class="col-sm-6 col-md-4  ">
       <section class="section product-section">
         <!-- Contenu généré par le javascript (product.js) -->
-
         <article class=" card nav-bg-color  border-dark ">
       </section>
   </main>
-
-  <!-- 
-      <div id="product-card" class="col-sm-6 col-md-4 ">
-        <article class=" card nav-bg-color  border-dark product-card "> -->
-  <!-- contenu génénré par le javascript produit.js -->
-  <!-- <img id="img-product" class="img-top" src="../images/teddy_1.jpg" alt="">
-          <aside class="card-body">
-            <h3 id="nom-product" class="card-title">
-            </h3>
-            <button class="btn btn-primary font-weight-bold">
-              59.00 $
-            </button>
-            <button class="btn btn-success float-right font-weight-bold">
-
-              <span class="text-add-panier">Ajouter au Panier</span>
-            </button>
-          </aside>
-        </article>
-      </div> -->
-
-  <!-- Contenu généré par le javascript (product.js) -->
-  <!-- </section>
-      </main> -->
   <!-- FOOTER -->
   <footer class="container-fluid nav-bg-color mt-5 pt-4">
     <div class="container">
@@ -110,13 +80,9 @@
     </div>
     </main>
   </footer>
-
   <!--     MY SCRIPT FRONT    -->
-
   <script src="../script/produit.js"></script>
   <script src="../script/components.js"></script>
-
-
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
