ajout du btn vider le panier

--- a/pages/produit.html
+++ b/pages/produit.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -46,13 +47,14 @@
       </div>
     </div>
   </nav>
-  <main id="productlist" class="row d-flex justify-content-center">
+  <div id="productlist" class="row d-flex justify-content-center">
     <div class="col-sm-6 col-md-4  ">
-      <section class="section product-section">
+      <section class="section product-section mb-6">
         <!-- Contenu généré par le javascript (product.js) -->
-        <article class=" card nav-bg-color  border-dark ">
+        <article class=" card nav-bg-color  border-dark "></article>
       </section>
-  </main>
+    </div>
+  </div>
   <!-- FOOTER -->
   <footer class="container-fluid nav-bg-color mt-5 pt-4">
     <div class="container">
@@ -78,7 +80,6 @@
         </div>
       </div>
     </div>
-    </main>
   </footer>
   <!--     MY SCRIPT FRONT    -->
   <script src="../script/produit.js"></script>
