--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html lang="fr">
 
 <head>
@@ -48,7 +49,7 @@
     </div>
   </nav>
   <main class="container">
-    <section id="productlist" class="row d-flex justify-content-center">
+    <section id="productlist" class="row d-flex justify-content-center mb-6 ">
     </section>
   </main>
   <!--     FOOTER     -->
@@ -76,7 +77,6 @@
         </div>
       </div>
     </div>
-    </main>
   </footer>
   <!--     MY SCRIPT FRONT    -->
   <script src="./script/index.js"></script>
